@@ -42,7 +42,7 @@
 #define CPLD_FLASH		__REG16(0x71000000)
 #define CPLD_REVISION		__REG8(0x71400000)
 
-#define CPLD_CONTROL_WLPE	(1<<0)
+#define CPLD_CONTROL_WLPEN	(1<<0)
 #define CPLD_CONTROL_LCD_VEEEN	(1<<1)
 
 #define CPLD_FLASH_FL_VPEN	(1<<0)
